<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group>
        <item
            android:id="@+id/SortBy_menu"
            android:title="@string/sort_by">

            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"/>
                <item
                    android:id="@+id/menu_desc"
                    android:title="Old To New"/>
                <item
                    android:id="@+id/menu_asc"
                    android:title="New To Old"/>
            </menu>
        </item>

    </group>

    <item
        android:id="@+id/DeleteAll_menu"
        android:title="@string/delete_all"
        app:showAsAction="never"/>

</menu>